# Maeve

./: .gitignore  .gitmodules  Maeve.sln  docker-compose.dev.yaml  docker-compose.yaml
DbMigrationService/: DbMigrationService.csproj  Program.cs  Worker.cs
DbMigrationService/Properties/: launchSettings.json
Maeve/: .gitignore  Dockerfile  DocumentProcessor.cs  IDocumentProcessor.cs  Maeve.csproj  Program.cs  mcp-server-config.json  mcp-server-config.local.json  mcp_server_config.json  package-lock.json  package.json
Maeve.AppHost/: .env.example  AppHost.cs  Maeve.AppHost.csproj  publish.sh
Maeve.AppHost/Properties/: launchSettings.json
Maeve.ServiceDefaults/: Maeve.ServiceDefaults.csproj
Maeve/Components/: App.razor  _Imports.razor  app.css  app.js
Maeve/Conversations/: ConversationContext.cs  ConversationManager.cs  IConversationContext.cs  IConversationManager.cs
Maeve/Database/: Conversation.cs  DataContext.cs  Document.cs  DocumentState.cs  Message.cs  Role.cs  Tool.cs
Maeve/Documents/: DocumentIngestClient.cs  DocumentProcessor.cs  IDocumentIngestClient.cs  IDocumentProcessor.cs
Maeve/Extensions/: AiClientServiceCollectionExtensions.cs  EnumExtensions.cs  StringExtensions.cs
Maeve/Logging/: ILogger.cs  LogCategory.cs  Logger.cs
Maeve/MCP/: IOrchestrator.cs  Orchestrator.cs
Maeve/Migrations/: 20250718124950_InitialCreate.Designer.cs  20250718124950_InitialCreate.cs  20250719103831_InitialCreate.Designer.cs  (+14 more)
rag-ingester/: Dockerfile  dto.py  ingester.py  main.py  pyproject.toml
rag-mcp-server/: Dockerfile  main.py  pyproject.toml
(+56 files in other folders)
